writ-compiler/tests/snapshots/lowering_tests__optional_param_type.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "greet",
                name_span: 3..8,
                generics: [],
                params: [
                    AstParam {
                        name: "name",
                        name_span: 9..13,
                        ty: Generic {
                            name: "Option",
                            args: [
                                Named {
                                    name: "string",
                                    span: 15..21,
                                },
                            ],
                            span: 15..22,
                        },
                        span: 9..22,
                    },
                ],
                return_type: None,
                body: [],
                span: 0..26,
            },
        ),
    ],
}
