writ-compiler/tests/snapshots/lowering_tests__passthrough_contract_and_component.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Contract(
            AstContractDecl {
                attrs: [],
                vis: None,
                name: "Drawable",
                name_span: 9..17,
                generics: [],
                members: [
                    FnSig(
                        AstFnSig {
                            attrs: [],
                            vis: None,
                            qualifier: None,
                            qualifier_span: None,
                            name: "draw",
                            name_span: 27..31,
                            generics: [],
                            params: [
                                Regular(
                                    AstParam {
                                        name: "x",
                                        name_span: 32..33,
                                        ty: Named {
                                            name: "int",
                                            span: 35..38,
                                        },
                                        span: 32..38,
                                    },
                                ),
                                Regular(
                                    AstParam {
                                        name: "y",
                                        name_span: 40..41,
                                        ty: Named {
                                            name: "int",
                                            span: 43..46,
                                        },
                                        span: 40..46,
                                    },
                                ),
                            ],
                            return_type: Some(
                                Named {
                                    name: "bool",
                                    span: 51..55,
                                },
                            ),
                            span: 24..56,
                        },
                    ),
                ],
                span: 0..58,
            },
        ),
        Extern(
            Component(
                None,
                AstComponentDecl {
                    attrs: [],
                    vis: None,
                    name: "Health",
                    name_span: 76..82,
                    members: [
                        Field(
                            AstStructField {
                                vis: None,
                                is_mutable: false,
                                name: "current",
                                name_span: 89..96,
                                ty: Named {
                                    name: "int",
                                    span: 98..101,
                                },
                                default: None,
                                span: 89..101,
                            },
                        ),
                        Field(
                            AstStructField {
                                vis: None,
                                is_mutable: false,
                                name: "max",
                                name_span: 107..110,
                                ty: Named {
                                    name: "int",
                                    span: 112..115,
                                },
                                default: None,
                                span: 107..115,
                            },
                        ),
                    ],
                    span: 66..118,
                },
            ),
        ),
    ],
}
